syntax = "proto3";

package pb;

option go_package = "./";

message UpdateStockRequest {
    repeated string pids = 1;
    repeated int32 deltas = 2;
}

message UpdateStockResponse {
    repeated string out_of_stock = 1;
}

message CheckStockRequest {
    repeated string pids = 1;
}

message CheckStockResponse {
    repeated int32 inStock = 2;
}

service InventoryService {
    rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse) {
    }
    rpc CheckStock (CheckStockRequest) returns (CheckStockResponse) {
    }
}